added new page templates

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -435,6 +435,39 @@
             "a8034bad"
           ],
           "type": "sass"
+        },
+        "18fa697f": {
+          "id": "18fa697f",
+          "path": "home.php",
+          "output": "home.php",
+          "name": "home.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "6bd6f59d": {
+          "id": "6bd6f59d",
+          "path": "contact.php",
+          "output": "contact.php",
+          "name": "contact.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "da82d43d": {
+          "id": "da82d43d",
+          "path": "menu.php",
+          "output": "menu.php",
+          "name": "menu.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
