--- a/prepros.cfg
+++ b/prepros.cfg
@@ -468,6 +468,58 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "4155a4ab": {
+          "id": "4155a4ab",
+          "path": "images/salad1280.jpg",
+          "output": "images/salad1280.jpg",
+          "name": "salad1280.jpg",
+          "category": "IMAGE",
+          "size": 218912,
+          "type": "jpg",
+          "initialSize": 218912,
+          "optimized": false,
+          "height": 800,
+          "width": 1280
+        },
+        "a964ca19": {
+          "id": "a964ca19",
+          "path": "images/tumblr_nn2hkyd2XF1slhhf0o1_1280.jpg",
+          "output": "images/tumblr_nn2hkyd2XF1slhhf0o1_1280.jpg",
+          "name": "tumblr_nn2hkyd2XF1slhhf0o1_1280.jpg",
+          "category": "IMAGE",
+          "size": 275331,
+          "type": "jpg",
+          "initialSize": 275331,
+          "optimized": false,
+          "height": 853,
+          "width": 1280
+        },
+        "942ef4df": {
+          "id": "942ef4df",
+          "path": "images/cake1280.jpg",
+          "output": "images/cake1280.jpg",
+          "name": "cake1280.jpg",
+          "category": "IMAGE",
+          "size": 162064,
+          "type": "jpg",
+          "initialSize": 162064,
+          "optimized": false,
+          "height": 800,
+          "width": 1280
+        },
+        "6e61f13a": {
+          "id": "6e61f13a",
+          "path": "img/meringue_dessert.jpg",
+          "output": "img/meringue_dessert.jpg",
+          "name": "meringue_dessert.jpg",
+          "category": "IMAGE",
+          "size": 725983,
+          "type": "jpg",
+          "initialSize": 725983,
+          "optimized": false,
+          "height": 2329,
+          "width": 3500
         }
       },
       "deploymentHistory": {},
