--- a/prepros.cfg
+++ b/prepros.cfg
@@ -468,6 +468,19 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "6e61f13a": {
+          "id": "6e61f13a",
+          "path": "img/meringue_dessert.jpg",
+          "output": "img/meringue_dessert.jpg",
+          "name": "meringue_dessert.jpg",
+          "category": "IMAGE",
+          "size": 725983,
+          "type": "jpg",
+          "initialSize": 725983,
+          "optimized": false,
+          "height": 2329,
+          "width": 3500
         }
       },
       "deploymentHistory": {},
