edited menu page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -520,6 +520,19 @@
           "optimized": false,
           "height": 2329,
           "width": 3500
+        },
+        "e7db7c02": {
+          "id": "e7db7c02",
+          "path": "images/cinammonBun400.jpg",
+          "output": "images/cinammonBun400.jpg",
+          "name": "cinammonBun400.jpg",
+          "category": "IMAGE",
+          "size": 105806,
+          "type": "jpg",
+          "initialSize": 105806,
+          "optimized": false,
+          "height": 400,
+          "width": 1280
         }
       },
       "deploymentHistory": {},
