--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,17 +9,6 @@
       "name": "meant-to-bean",
       "path": "",
       "files": {
-        "e9a5932f": {
-          "id": "e9a5932f",
-          "path": "404.php",
-          "output": "404.php",
-          "name": "404.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "2e8f9ea2": {
           "id": "2e8f9ea2",
           "path": "README.md",
@@ -331,27 +320,6 @@
           ],
           "type": "sass"
         },
-        "23fd066d": {
-          "id": "23fd066d",
-          "path": "_home.scss",
-          "output": "_home.css",
-          "name": "_home.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "a8034bad"
-          ],
-          "type": "sass"
-        },
         "56a1eb19": {
           "id": "56a1eb19",
           "path": "_type.scss",
@@ -469,6 +437,19 @@
           "parents": [],
           "type": "php"
         },
+        "942ef4df": {
+          "id": "942ef4df",
+          "path": "images/cake1280.jpg",
+          "output": "images/cake1280.jpg",
+          "name": "cake1280.jpg",
+          "category": "IMAGE",
+          "size": 162064,
+          "type": "jpg",
+          "initialSize": 162064,
+          "optimized": false,
+          "height": 800,
+          "width": 1280
+        },
         "4155a4ab": {
           "id": "4155a4ab",
           "path": "images/salad1280.jpg",
@@ -495,24 +476,76 @@
           "height": 853,
           "width": 1280
         },
-        "942ef4df": {
-          "id": "942ef4df",
-          "path": "images/cake1280.jpg",
-          "output": "images/cake1280.jpg",
-          "name": "cake1280.jpg",
+        "8d95dee7": {
+          "id": "8d95dee7",
+          "path": "images/image1.jpg",
+          "output": "images/image1.jpg",
+          "name": "image1.jpg",
           "category": "IMAGE",
-          "size": 162064,
+          "size": 4022749,
           "type": "jpg",
-          "initialSize": 162064,
+          "initialSize": 4022749,
           "optimized": false,
-          "height": 800,
-          "width": 1280
+          "height": 2368,
+          "width": 2368
         },
-        "6e61f13a": {
-          "id": "6e61f13a",
-          "path": "img/meringue_dessert.jpg",
-          "output": "img/meringue_dessert.jpg",
-          "name": "meringue_dessert.jpg",
+        "d191eca3": {
+          "id": "d191eca3",
+          "path": "images/image5.jpg",
+          "output": "images/image5.jpg",
+          "name": "image5.jpg",
+          "category": "IMAGE",
+          "size": 634673,
+          "type": "jpg",
+          "initialSize": 634673,
+          "optimized": false,
+          "height": 2329,
+          "width": 3500
+        },
+        "45a5bdf6": {
+          "id": "45a5bdf6",
+          "path": "images/image3.jpg",
+          "output": "images/image3.jpg",
+          "name": "image3.jpg",
+          "category": "IMAGE",
+          "size": 10284426,
+          "type": "jpg",
+          "initialSize": 10284426,
+          "optimized": false,
+          "height": 4000,
+          "width": 6000
+        },
+        "d42ad22b": {
+          "id": "d42ad22b",
+          "path": "images/image4.jpg",
+          "output": "images/image4.jpg",
+          "name": "image4.jpg",
+          "category": "IMAGE",
+          "size": 7526442,
+          "type": "jpg",
+          "initialSize": 7526442,
+          "optimized": false,
+          "height": 3881,
+          "width": 5821
+        },
+        "89fc77b6": {
+          "id": "89fc77b6",
+          "path": "images/image2.jpg",
+          "output": "images/image2.jpg",
+          "name": "image2.jpg",
+          "category": "IMAGE",
+          "size": 6660326,
+          "type": "jpg",
+          "initialSize": 6660326,
+          "optimized": false,
+          "height": 4000,
+          "width": 6000
+        },
+        "26353c8e": {
+          "id": "26353c8e",
+          "path": "images/image6.jpg",
+          "output": "images/image6.jpg",
+          "name": "image6.jpg",
           "category": "IMAGE",
           "size": 725983,
           "type": "jpg",
@@ -520,6 +553,72 @@
           "optimized": false,
           "height": 2329,
           "width": 3500
+        },
+        "e9a5932f": {
+          "id": "e9a5932f",
+          "path": "404.php",
+          "output": "404.php",
+          "name": "404.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "1065a567": {
+          "id": "1065a567",
+          "path": "_404.scss",
+          "output": "_404.css",
+          "name": "_404.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a8034bad"
+          ],
+          "type": "sass"
+        },
+        "23fd066d": {
+          "id": "23fd066d",
+          "path": "_home.scss",
+          "output": "_home.css",
+          "name": "_home.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a8034bad"
+          ],
+          "type": "sass"
+        },
+        "8a2bf71b": {
+          "id": "8a2bf71b",
+          "path": "images/404.jpg",
+          "output": "images/404.jpg",
+          "name": "404.jpg",
+          "category": "IMAGE",
+          "size": 1061383,
+          "type": "jpg",
+          "initialSize": 1061383,
+          "optimized": false,
+          "height": 2499,
+          "width": 3987
         }
       },
       "deploymentHistory": {},
